examples/pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: hello-kiamol-3
spec:
  containers:
  - image: kiamol/ch02-hello-kiamol
    name: web
