examples/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: route-unsecured
spec:
  host: www.example.com
  path: "/test"   
  to:
    kind: Service
    name: service-name
